--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "event-emitter": "^0.3.5",
+    "styled-components": "^4.4.1"
   }
 }
