working with example cra

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "event-emitter": "^0.3.5",
     "styled-components": "^4.4.1"
   }
